--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ html {
 .menu-wrap {
   display: flex;
   background: #0d1728;
-  width: auto;
-  height: 100px;
+  width: 100%;
+  height: 7rem;
 }
 
 .logo {
@@ -25,9 +25,9 @@ html {
 }
 
 .nav-bar a {
-  padding: 1.5rem;
   display: flex;
   text-decoration: none;
+  margin-left: 0rem;
 }
 
 .ham-menu {
@@ -98,7 +98,7 @@ html {
 
 .wrapper {
   background: #090e18;
-  height: 4000px;
+  height: 3589px;
 }
 
 h1 {
@@ -236,4 +236,65 @@ b {
   color: #4e93fa;
   margin-left: 2.2rem;
   margin-top: 2rem;
+}
+
+.skills-list {
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  display: flex;
+  padding: 10rem 1rem 4rem 1rem; 
+}
+
+.skill-logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.js-logo {
+  width: 57px;
+  height: 64px;
+}
+
+.figma-logo {
+  width: 57px;
+  height: 64px;
+}
+
+.contact-title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  display: flex;
+  padding: 10rem 1rem 4rem 1rem; 
+}
+
+.contact-text {
+  display: flex;
+  text-align: center;
+  margin-left: 3.5rem;
+  width: 16rem;
+  align-content: center;
+  color: white;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  display: flex;
+  color: #4e93fa;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5.6rem;
+  padding: 1rem;
+}
+
+.contact-socials {
+  padding: 1rem;
+  margin-left: 2.5rem;
+}
+
+footer {
+  color: #4e93fa;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  margin-left: 7rem;
 }
