--- a/index.css
+++ b/index.css
@@ -24,10 +24,18 @@ html {
   padding: 25px;
 }
 
+a {
+  display: flex;
+  color: #4e93fa;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5.6rem;
+  padding: 1rem;
+}
+
 .nav-bar a {
   display: flex;
   text-decoration: none;
-  margin-left: 0rem;
+  margin-left: 0;
 }
 
 .ham-menu {
@@ -36,6 +44,7 @@ html {
 }
 
 .ham-menu span {
+  display: grid;
   height: 5px;
   width: 12%;
   background-color: rgb(247, 242, 242);
@@ -95,6 +104,10 @@ html {
   right: 0;
 }
 
+.desktop-menu {
+  display: none;
+}
+
 .wrapper {
   background: #090e18;
 }
@@ -122,20 +135,29 @@ b {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.connect {
-  padding: 1rem 5rem 5rem 2rem;
+.btn-intro {
+  width: 80%;
+  height: 40px;
+  background: #090e18;
+  border: #4e93fa 2px solid;
+  border-radius: 10px;
   color: #4e93fa;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 2.2rem;
+  margin-top: 2rem;
 }
 
 .socials {
-  padding: 1px 3rem 4rem 2rem;
-  margin-top: -0;
+  display: grid;
+  justify-content: center;
+  padding: 20px;
 }
 
-.socials li {
-  display: inline;
-  padding: 4%;
+.socials ul {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .work-cards {
@@ -237,11 +259,10 @@ b {
 }
 
 .skills-list {
-
   font-family: Arial, Helvetica, sans-serif;
   font-size: 32px;
   display: flex;
-  padding: 10rem 1rem 4rem 1rem; 
+  padding: 10rem 1rem 4rem 1rem;
 }
 
 .skill-logos {
@@ -263,7 +284,7 @@ b {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 32px;
   display: flex;
-  padding: 10rem 1rem 4rem 1rem; 
+  padding: 10rem 1rem 4rem 1rem;
 }
 
 .contact-text {
@@ -277,14 +298,6 @@ b {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
-  display: flex;
-  color: #4e93fa;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 5.6rem;
-  padding: 1rem;
-}
-
 .contact-socials {
   padding: 1rem;
   margin-left: 2.5rem;
@@ -295,4 +308,66 @@ footer {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
   margin-left: 7rem;
+}
+
+@media only screen and (min-width: 768px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+  }
+
+  .ham-menu span {
+    display: none;
+  }
+
+  .menu-wrap {
+    position: fixed;
+  }
+
+  .desktop-menu-wrap {
+    position: absolute;
+    top: 35px;
+    right: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .desktop-menu {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    gap: 20px;
+    list-style: none;
+  }
+
+  .desktop-menu li {
+    text-align: center;
+  }
+
+  .desktop-menu a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    transition: all 0.5s ease-out;
+  }
+
+  .desktop-menu li a:hover {
+    color: #4e93fa;
+  }
+
+  .h1-desktop {
+    padding: 12rem 2rem 3rem 2rem;
+    font-size: 50px;
+  }
+
+  .intro {
+    font-size: 30px;
+  }
+
+  .socials {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+  }
 }
