--- a/index.css
+++ b/index.css
@@ -13,15 +13,16 @@ html {
   background: #0d1728;
   width: 100%;
   height: 7rem;
+  position: fixed;
 }
 
 .logo {
-  color: white;
-  background: #0d1728;
-  font-weight: bolder;
-  font-size: 46px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  padding: 25px;
+  height: 76px;
+  margin-top: 1rem;
+}
+
+.nav-bar {
+  position: fixed;
 }
 
 .nav-bar a {
@@ -37,30 +38,31 @@ html {
 
 .ham-menu span {
   height: 5px;
-  width: 12%;
+  width: 30px;
   background-color: rgb(247, 242, 242);
   border-radius: 25px;
   position: absolute;
   top: 2%;
-  left: 88%;
+  left: 21rem;
   transform: translate(-50%, -50%);
   transition: 0.3 ease;
 }
 
 .ham-menu span:nth-child(1) {
-  top: 4%;
+  top: 2.6rem;
 }
 
 .ham-menu span:nth-child(2) {
-  top: 6%;
+  top: 3.61rem;
 }
 
 .ham-menu span:nth-child(3) {
-  top: 8%;
+  top: 4.7rem;
 }
 
 .ham-menu.active span:nth-child(1) {
-  top: 6%;
+  top: 6.6%;
+  position: fixed;
   transform: translate(-50%, -50%) rotate(45deg);
 }
 
@@ -69,29 +71,39 @@ html {
 }
 
 .ham-menu.active span:nth-child(3) {
-  top: 5.5%;
+  position: fixed;
+  top: 6%;
   transform: translate(-50%, 50%) rotate(-45deg);
 }
 
 .off-screen-menu {
-  background-color: rgba(13, 24, 40, 0.747);
+  background: rgba(13, 24, 40, 0.747);
+  backdrop-filter: blur(10px);
   height: 100vh;
   width: 100vw;
   max-width: 450px;
   position: fixed;
-  top: 0;
   right: -450px;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 3rem;
+  font-size: 40px;
   transition: 0.3s ease;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  padding: 2px;
+  text-align: center;
 }
 
-.off-screen-menu :active {
+.off-screen-menu ul  {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+}
+
+.off-screen-menu.active {
   right: 0;
 }
 
@@ -104,6 +116,12 @@ h1 {
   color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 45px;
+}
+
+.jesse {
+  display: flex;
+  width: 60%;
+  margin-left: 2rem;
 }
 
 .myName {
