--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ html {
 
 .menu-wrap {
   display: flex;
-  background: #0d1728;
+  background: #090e18;
   width: 100%;
   height: 7rem;
   position: fixed;
@@ -25,10 +25,51 @@ html {
   position: fixed;
 }
 
+a {
+  display: flex;
+  color: #4e93fa;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5.6rem;
+  padding: 1rem;
+}
+
 .nav-bar a {
   display: flex;
   text-decoration: none;
-  margin-left: 0rem;
+  margin-left: 0;
+}
+
+.socials {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  z-index: 1;
+}
+
+.socials ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.socials li {
+  margin: 0 8px;
+  padding: 0;
+}
+
+.socials a {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+
+.media {
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 .ham-menu {
@@ -49,21 +90,22 @@ html {
 }
 
 .ham-menu span:nth-child(1) {
-  top: 2.6rem;
+  top: 40px;
 }
 
 .ham-menu span:nth-child(2) {
-  top: 3.61rem;
+  top: 50px;
 }
 
 .ham-menu span:nth-child(3) {
-  top: 4.7rem;
+  top: 60px;
 }
 
 .ham-menu.active span:nth-child(1) {
   top: 6.6%;
   position: fixed;
   transform: translate(-50%, -50%) rotate(45deg);
+  background-color: #4e93fa;
 }
 
 .ham-menu.active span:nth-child(2) {
@@ -72,12 +114,13 @@ html {
 
 .ham-menu.active span:nth-child(3) {
   position: fixed;
-  top: 6%;
+  top: 5.9%;
   transform: translate(-50%, 50%) rotate(-45deg);
+  background-color: #4e93fa;
 }
 
 .off-screen-menu {
-  background: rgba(13, 24, 40, 0.747);
+  background: #fff;
   backdrop-filter: blur(10px);
   height: 100vh;
   width: 100vw;
@@ -92,12 +135,12 @@ html {
   font-size: 40px;
   transition: 0.3s ease;
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: #686565;
   padding: 2px;
   text-align: center;
 }
 
-.off-screen-menu ul  {
+.off-screen-menu ul {
   display: flex;
   flex-direction: column;
   list-style-type: none;
@@ -113,7 +156,7 @@ html {
 
 h1 {
   padding: 7rem 4px 7px 2rem;
-  color: white;
+  color: #686565;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 45px;
 }
@@ -129,7 +172,7 @@ h1 {
 }
 
 .intro {
-  color: white;
+  color: #686565;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   width: 95%;
   padding: 1rem 3rem 3rem 2rem;
@@ -140,20 +183,16 @@ b {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.connect {
-  padding: 1rem 5rem 5rem 2rem;
+.sayHibtn {
+  width: 50%;
+  height: 50px;
+  background: #d5d7d9;
   color: #4e93fa;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.socials {
-  padding: 1px 3rem 4rem 2rem;
-  margin-top: -0;
-}
-
-.socials li {
-  display: inline;
-  padding: 4%;
+  font-size: 20px;
+  border: #4e93fa 1px solid;
+  border-radius: 10px;
+  margin-bottom: 6rem;
+  margin-left: 2rem;
 }
 
 .work-cards {
@@ -211,7 +250,7 @@ b {
 .card-title {
   display: flex;
   padding: 2px;
-  color: white;
+  color: #686565;
   font-family: Arial, Helvetica, sans-serif;
   justify-content: space-around;
   align-items: baseline;
@@ -227,7 +266,7 @@ b {
 }
 
 .card-text {
-  color: white;
+  color: #686565;
   font-family: Arial, Helvetica, sans-serif;
   width: 66%;
   margin-left: 2rem;
@@ -255,11 +294,10 @@ b {
 }
 
 .skills-list {
-
   font-family: Arial, Helvetica, sans-serif;
   font-size: 32px;
   display: flex;
-  padding: 10rem 1rem 4rem 1rem; 
+  padding: 10rem 1rem 4rem 1rem;
 }
 
 .skill-logos {
@@ -281,7 +319,7 @@ b {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 32px;
   display: flex;
-  padding: 10rem 1rem 4rem 1rem; 
+  padding: 10rem 1rem 4rem 1rem;
 }
 
 .contact-text {
@@ -290,22 +328,9 @@ b {
   margin-left: 3.5rem;
   width: 16rem;
   align-content: center;
-  color: white;
+  color: #686565;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-a {
-  display: flex;
-  color: #4e93fa;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 5.6rem;
-  padding: 1rem;
-}
-
-.contact-socials {
-  padding: 1rem;
-  margin-left: 2.5rem;
 }
 
 footer {
