--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ a {
 }
 
 .socials {
+  display: block;
   padding: 0;
   margin: 0;
   position: relative;
@@ -154,6 +155,7 @@ a {
 
 .wrapper {
   background: #090e18;
+  width: fit-content;
 }
 
 h1 {
@@ -340,4 +342,244 @@ footer {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
   margin-left: 7rem;
+}
+
+.img-profile {
+  display: none;
+}
+
+.desktop-menu {
+  display: none;
+}
+
+.btn-intro {
+  display: none;
+}
+
+hr {
+  display: none;
+}
+
+br {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+  }
+
+  hr {
+    display: block;
+  }
+
+  br {
+    display: block;
+  }
+  
+  .ham-menu {
+    display: none;
+  }
+
+  .off-screen-menu {
+    display: none;
+  }
+
+  .desktop-menu-wrap {
+    position: absolute;
+    top: 35px;
+    left: 90rem;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .desktop-menu {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    gap: 20px;
+    list-style: none;
+  }
+
+  .desktop-menu li {
+    text-align: center;
+  }
+
+  .desktop-menu a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    transition: all 0.5s ease-out;
+  }
+
+  .desktop-menu li a:hover {
+    color: #4e93fa;
+  }
+
+  .h1-desktop {
+    padding: 12rem 2rem 3rem 2rem;
+    font-size: 50px;
+  }
+
+  .intro {
+    font-size: 30px;
+    width: 60%;
+  }
+
+  .jesse {
+    display: none;
+  }
+
+  .sayHibtn {
+    display: none;
+  }
+
+  .btn-intro {
+    display: block;
+    width: 20%;
+    height: 40px;
+    font-size: 20px;
+    margin-top: -8rem;
+    margin-left: 2rem;
+    border: #4e93fa 1px solid;
+    border-radius: 10px;
+    color: #4e93fa;
+    background-color: #090e18;
+    transition: all 0.5s ease-out;
+  }
+
+  .btn-intro:hover {
+    color: white;
+    background: #4e93fa;
+  }
+
+  .img-profile {
+    display: block;
+    margin-top: -30rem;
+    margin-left: 60rem;
+  }
+
+  .img-responsive {
+    width: auto;
+    height: auto;
+    box-shadow: 10px 10px 2px rgba(12, 143, 231, 0.7);
+    transition: box-shadow 0.3s ease-out;
+  }
+
+  .img-responsive:hover {
+    box-shadow: 15px 15px 15px 15px rgba(12, 143, 231, 0.7);
+  }
+
+  hr {
+    border: 1px solid #4e93fa;
+    width: 70%;
+    margin-left: 14rem;
+  }
+
+  .socials-desktop {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    padding: 2rem;
+    justify-content: center;
+  }
+
+  .work-cards {
+    display: none;
+  }
+
+  .desktop-cards {
+    display: flex;
+    justify-content: center;
+  }
+
+  .skills-list-desktop {
+    display: flex;
+    justify-content: center;
+  }
+
+  .contact-title-desktop {
+    display: flex;
+    justify-content: center;
+  }
+
+  .contact-text-desktop {
+    display: flex;
+    width: 40%;
+    font-size: 30px;
+    margin-left: 30rem;
+  }
+
+  .contact-email-desktop {
+    display: flex;
+    margin-left: 41.5rem;
+    font-size: 22px;
+  }
+
+  .card-desktop {
+    display: grid;
+    width: auto;
+    margin-right: 1rem;
+  }
+
+  .project-desktop {
+    margin-left: 50rem;
+    margin-top: -31rem;
+  }
+
+  .card-title {
+    display: none;
+  }
+
+  .card-title-desktop {
+    display: flex;
+    width: 70%;
+    padding: 0;
+    justify-content: space-evenly;
+    margin-left: 4.8rem;
+    margin-top: -27rem;
+  }
+
+  .card-title-desktop h2 {
+    margin-bottom: 2rem;
+  }
+
+  .details-desktop {
+    margin-left: 41rem;
+  }
+
+  .text-desktop {
+    display: flex;
+    margin-left: 50rem;
+    margin-top: -22rem;
+    font-size: 24px;
+    width: 40%;
+  }
+
+  .tech-desktop {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 33rem;
+    margin-top: -15rem;
+  }
+
+  .card-btn-desktop {
+    width: 22%;
+    margin-left: 52%;
+    margin-top: -10rem;
+    font-size: 20px;
+  }
+
+  .img-desktop {
+    width: 50%;
+    height: 34rem;
+  }
+
+  footer {
+    display: flex;
+    margin-left: 45rem;
+    margin-top: 2rem;
+  }
 }
