change text to white

--- a/index.css
+++ b/index.css
@@ -270,7 +270,7 @@ b {
 }
 
 .card-text {
-  color: #686565;
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   width: 66%;
   margin-left: 2rem;
